command-derive/tests/06-reject-wrong-code-lit.stderr
error: Only string literal allowed as value in #[command(code = "LIT")]
 --> $DIR/06-reject-wrong-code-lit.rs:3:10
  |
3 | #[derive(Command)]
  |          ^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
